--- a/ExerciseAngular/appsettings.json
+++ b/ExerciseAngular/appsettings.json
@@ -3,7 +3,7 @@
         "Secret": "SOME MAGIC UNICORNS GENERATE THIS SECRET"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExerciseAngular-3B9CB423-56BC-4780-BC38-043EFD322171;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.;Database=Catstagram;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
